--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body class="lock-scroll">
-    <div class="loader" id="loadei">
+    <!-- <div class="loader" id="loadei">
         <div class="lds-ellipsis">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
         </div>
-    </div>
+    </div> -->
     <div class="semi-loader" >
         <div class="header" id="nav-1">
             <div class="name">
