--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="image/Red and Black Illustrative Barber Shop Logo.webp" type="image/x-icon">
 </head>
 
-<body class="lock-scroll">
+<body >
     <!-- <div class="loader" id="loadei">
         <div class="lds-ellipsis">
             <div></div>
