--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <link rel="shortcut icon" href="image/Red and Black Illustrative Barber Shop Logo.webp" type="image/x-icon">
 </head>
 
-<body >
-    <!-- <div class="loader" id="loadei">
+<body class="lock-scroll">
+    <div class="loader" id="loadei">
         <div class="lds-ellipsis">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
         </div>
-    </div> -->
+    </div>
     <div class="semi-loader" >
         <div class="header" id="nav-1">
             <div class="name">
