--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             </div>
                         </div>
                         <br>
-                        <img src="image/em1.webp" alt="" width="270px" style="border-radius: 10px;" loading="lazy">
+                        <img src="image/em1.webp" alt="" width="270px" style="border-radius: 10px;" >
 
                     </div>
                     <div class="em2">
@@ -565,7 +565,7 @@
                             </div>
                         </div>
                         <br>
-                        <img src="image/em1.webp" alt="" width="270px" style="border-radius: 10px;" loading="lazy">
+                        <img src="image/em1.webp" alt="" width="270px" style="border-radius: 10px;" >
 
                     </div>
                     <div class="em2">
@@ -582,7 +582,7 @@
                             </div>
                         </div>
                         <br>
-                        <img src="image/em2.webp" alt="" width="270px" style="border-radius: 10px;" loading="lazy">
+                        <img src="image/em2.webp" alt="" width="270px" style="border-radius: 10px;" >
 
                     </div>
                     <div class="em3">
@@ -598,7 +598,7 @@
                             </div>
                         </div>
                         <br>
-                        <img src="image/em3.webp" alt="" width="270px" style="border-radius: 10px;" loading="lazy">
+                        <img src="image/em3.webp" alt="" width="270px" style="border-radius: 10px;" >
 
                     </div>
 
@@ -615,7 +615,7 @@
             </div>
             </div>
     
-            <!-- <div class="pre-employ-2">
+             <div class="pre-employ-2">
                 <div class="employ-2   fade-from-down">
                     <div class="em-md">
                         <div class="em1">
@@ -711,8 +711,8 @@
 
 
 
-            </div> -->
-    </main>
+            </div> 
+            </main>
 
     <!-- main 5 -->
     <main>
