--- a/index.html
+++ b/index.html
@@ -2,16 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbershop</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Barbershop</title>
+
+  
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+
+  
+  <link rel="stylesheet" href="style.css" />
+
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    media="print"
+    onload="this.media='all'"
+  />
+
+ 
+  <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    media="print"
+    onload="this.media='all'"
   />
-  <link rel="shortcut icon" href="image/Red and Black Illustrative Barber Shop Logo.webp" type="image/x-icon">
+
+  <link rel="shortcut icon" href="image/Red and Black Illustrative Barber Shop Logo.webp" type="image/x-icon" />
 </head>
 
 <body class="lock-scroll">
