--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </li>
                             <li><a href="#" class="nav-link">About us</a></li>
                             <li><a href="#" class="nav-link">Location</a></li>
-                            <li><a href="#" class="nav-link">Shop</a></li>
+                            <li><a href="https://github.com/WebdevFahad/Barber-shop" class="nav-link" target="_blank">Github source</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -77,7 +77,7 @@
         <!-- Hero Section -->
 
         <section class="hero-section" id="home"
-            style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url(image/barber2.webp) center / cover;">
+            style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url(image/im1.webp) center / cover;">
            
             <div id="af-nav" class="media-af-nav">
                 <div class="second-part" id="media-2">
@@ -217,7 +217,7 @@
                 <div id="md-m1l2">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13508.039490135805!2d74.18553665541992!3d32.1770085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391f298c417ced37%3A0xaf8f0535682478f9!2sGolden%20Grace%20hair%20%26%20beauty%20Saloon!5e0!3m2!1sen!2s!4v1747874746471!5m2!1sen!2s"
-                        width="600" height="450" allowfullscreen="" loading="lazy"
+                        width="600" height="450" allowfullscreen=""
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div id="md-m1l3">
@@ -276,7 +276,7 @@
                         <img src="image/bar2.webp" alt="">
                         <img src="image/bar3.webp" alt="">
                     </div>
-                    <div>
+                   <div>
                         <img src="image/cs1.webp" alt="">
                         <img src="image/cs2.webp" alt="">
                         <img src="image/cs3.webp" alt="">
