--- a/index.html
+++ b/index.html
@@ -277,17 +277,17 @@
                         <img src="image/bar3.webp" alt="">
                     </div>
                    <div>
-                        <img src="image/cs1.jfif" alt="">
-                        <img src="image/cs2.jfif" alt="">
-                        <img src="image/cs3.jfif" alt="">
+                        <img src="image/cs1.webp" alt="">
+                        <img src="image/cs2.webp" alt="">
+                        <img src="image/cs3.webp" alt="">
                     </div>
                     <div>
-                        <img src="image/cs4.jfif" alt="">
-                        <img src="image/cs5.jfif" alt="">
+                        <img src="image/cs4.webp" alt="">
+                        <img src="image/cs5.webp" alt="">
                         <img src="image/h6.webp" alt="">
                     </div>
                     <div>
-                        <img src="image/cs9.jfif" alt="">
+                        <img src="image/cs9.webp" alt="">
                         <img src="image/cs6.webp" alt="">
                         <img src="image/cs7.webp" alt="">
                     </div>
@@ -329,18 +329,18 @@
                    
                     </div>
                     <div>
-                        <img src="image/cs1.jfif" alt="">
-                        <img src="image/cs2.jfif" alt="">
-                        <img src="image/cs3.jfif" alt="">
+                        <img src="image/cs1.webp" alt="">
+                        <img src="image/cs2.webp" alt="">
+                        <img src="image/cs3.webp" alt="">
                     </div>
                     <div>
                        
                          <img src="image/bar2.jfif" alt="">
-                        <img src="image/cs5.jfif" alt="">
+                        <img src="image/cs5.webp" alt="">
                         <img src="image/h6.webp" alt="">
                     </div>
                     <div>
-                        <img src="image/cs9.jfif" alt="">
+                        <img src="image/cs9.webp" alt="">
                         <img src="image/cs6.webp" alt="">
                         <img src="image/cs7.webp" alt="">
                     </div>
