--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13508.039490135805!2d74.18553665541992!3d32.1770085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391f298c417ced37%3A0xaf8f0535682478f9!2sGolden%20Grace%20hair%20%26%20beauty%20Saloon!5e0!3m2!1sen!2s!4v1747874746471!5m2!1sen!2s"
                         width="600" height="450" allowfullscreen=""
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        referrerpolicy="no-referrer-when-downgrade" alt="Loading" ></iframe>
                 </div>
                 <div id="md-m1l3">
                     <div class="div-1">
@@ -333,12 +333,7 @@
                         <img src="image/cs2.webp" alt="">
                         <img src="image/cs3.webp" alt="">
                     </div>
-                    <div>
-                       
-                         <img src="image/bar2.jfif" alt="">
-                        <img src="image/cs5.webp" alt="">
-                        <img src="image/h6.webp" alt="">
-                    </div>
+                    
                     <div>
                         <img src="image/cs9.webp" alt="">
                         <img src="image/cs6.webp" alt="">
